--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,6 +1,6 @@
 <footer class="site-footer" role="contentinfo">
   <div class="container footer__inner">
-    <div class="footer__copy">© {{ year }} pndaCM</div>
+    <div class="footer__copy">© {{ year }} LeonardsMedia</div>
     <nav class="footer__nav" aria-label="Footer-Navigation">
       <a [routerLink]="['/about']">Über uns</a>
       <a [routerLink]="['/imprint']">Impressum</a>
