--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -2,12 +2,12 @@
   <div class="container header__inner">
 
     <!-- Logo -->
-    <img class="brand" src="assets/LM_Logos/Logo1.png" alt="pndaCM" decoding="async" (click)="routeTo('/')" />
+    <img class="brand" src="assets/LM_Logos/Logo1.png" alt="LeonardsMedia" decoding="async" (click)="routeTo('/')" />
 
     <!-- Navigation -->
     <nav id="primary-nav" class="nav" [class.open]="open">
       <a (click)="routeTo('/')" routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
-        Startseite
+        Home
       </a>
 
 
@@ -27,19 +27,19 @@
 
         <a (click)="routeTo('/mygarage')" routerLink="/mygarage" routerLinkActive="active"
           [routerLinkActiveOptions]="{ exact: true }">
-          Meine Garage
+          Garage
         </a>
         <a (click)="routeTo('/explorer')" routerLink="/explorer" routerLinkActive="active"
           [routerLinkActiveOptions]="{ exact: true }">
-          Alle Fahrzeuge
+          Car Database
         </a>
         <a (click)="routeTo('/tuning-browser')" routerLink="/tuning-browser" routerLinkActive="active"
           [routerLinkActiveOptions]="{ exact: true }">
-          Tuning Manager
+          TuningFlow
         </a>
         <a (click)="routeTo('/budget-calc')" routerLink="/budget-calc" routerLinkActive="active"
           [routerLinkActiveOptions]="{ exact: true }">
-          Rechner
+          Budget Calc
         </a>
 
 
@@ -48,7 +48,6 @@
         <a *ngIf="user.role === UserRole.ADMIN" (click)="routeTo('/admin/users')" routerLink="/admin/users"
           routerLinkActive="active" class="nav-link--admin">
           <span class="material-symbols-outlined ms-size-20">admin_panel_settings</span>
-          Admin
         </a>
 
 
