--- a/src/app/components/car-detail/car-detail.component.html
+++ b/src/app/components/car-detail/car-detail.component.html
@@ -1,3 +1,4 @@
+<!-- src/app/features/cars/car-detail/car-detail.component.html -->
 <section class="car-detail-page" *ngIf="!loading && car">
   <div class="container">
 
