--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -8,8 +8,8 @@
       <div class="hero__content">
 
         <h1 class="hero__title">
-          <span class="hero__title-main">Dein Car Manager.</span>
-          <span class="hero__title-sub">Garage, Termine & Budgetplanung an einem Ort.</span>
+          <span class="hero__title-main">LeonardsMedia</span>
+          <span class="hero__title-sub">Car Manager</span>
         </h1>
 
         <div class="hero__value-props">
